[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/editor/open_popup.gd" type="Script" id=1]

[node name="OpenPopup" type="PopupDialog"]
visible = true
margin_right = 1000.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 66.0
theme_type_variation = "BigLabel"
text = "打开地图"
align = 1
valign = 1

[node name="Confirm" type="Button" parent="."]
anchor_left = 0.88
anchor_top = 0.88
anchor_right = 0.98
anchor_bottom = 0.975
text = "确定"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Delete" type="Button" parent="."]
anchor_left = 0.76
anchor_top = 0.88
anchor_right = 0.86
anchor_bottom = 0.975
text = "删除"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Cancel" type="Button" parent="."]
anchor_left = 0.0133333
anchor_top = 0.88
anchor_right = 0.113333
anchor_bottom = 0.975
text = "取消"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -220.0
margin_right = 476.0
margin_bottom = 196.0

[node name="ItemList" type="ItemList" parent="ScrollContainer"]
margin_right = 956.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
same_column_width = true

[connection signal="about_to_show" from="." to="." method="_on_show"]
[connection signal="button_down" from="Confirm" to="." method="_on_confirm"]
[connection signal="button_down" from="Delete" to="." method="_on_delete"]
[connection signal="button_down" from="Cancel" to="." method="_on_cancel"]
[connection signal="item_selected" from="ScrollContainer/ItemList" to="." method="_on_item_selected"]
